# Fuel-Aware-Route

./: .gitignore  Plan.md  README.md  pyproject.toml  requirements.txt
ADA_Final_Report/: final-report.lot  final-report.tex  references.bib
ADA_Final_Report/chapters/: ch2_related.tex  ch5_correctness.tex  ch6_complexity.tex  ch7_experiments.tex  ch8_contributions.tex  ch8_results_discussion.tex  ch9_conclusion.tex
ADA_Progress_Report/: progress-report.lot  progress-report.tex
ADA_Progress_Report/chapters/: ch1_problem.tex  ch3_algorithms.tex  ch4_data_structures.tex
configs/: synthetic_100.env
data/real_routes/: corridors.example.json  corridors.json  station_prices.csv
demo/: README.md  real_corridor_demo.sh  running_example_demo.sh
final-report/: final-report.tex
final-report/chapters/: ch1_problem.tex  ch2_related.tex  ch3_algorithms.tex  ch5_correctness.tex  ch6_complexity.tex  ch7_experiments.tex  ch8_results_discussion.tex  ch9_conclusion.tex
results/: synthetic_results.csv
results/report_assets/: synthetic_results_overview.md
scripts/: analyze_real_results.py  analyze_synthetic_results.py  collect_real_route_data.py  run_all_experiments.py  run_bash_synthetic_experiments.sh  run_real_experiments.py  run_synthetic_100.ps1  run_synthetic_100.sh  run_synthetic_experiment.py  run_windows_collect_real_route_data.ps1  run_windows_finalize_report.ps1  run_windows_real_experiments.ps1  run_windows_synthetic_experiments.ps1
src/ada_route_opt/: __init__.py  algorithms.py  graph.py  metrics.py  real_instances.py  (+1 more)
tests/: test_algorithms.py
(+32 files in other folders)
