[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ada-route-opt"
version = "0.1.0"
description = "Fuel-aware route optimization algorithms for the ADA project."
requires-python = ">=3.11"
dependencies = [
  "networkx>=3.2",
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
